force-app/main/default/objects/ReplenishmentPolicy__c/ReplenishmentPolicy__c.object-meta.xml
<CustomObject>
    <label>Replenishment Policy</label>
    <pluralLabel>Replenishment Policies</pluralLabel>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Replenishment Policy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Replenishment Policies</relationshipLabel>
        <relationshipName>ReplenishmentPolicies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Replenishment Policies</relationshipLabel>
        <relationshipName>ReplenishmentPolicies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MinQty__c</fullName>
        <label>Min Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxQty__c</fullName>
        <label>Max Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysCover__c</fullName>
        <label>Days Cover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SafetyStock__c</fullName>
        <label>Safety Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadTimeDays__c</fullName>
        <label>Lead Time Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutoFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Flag</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>