force-app/main/default/objects/ReplenishmentPolicy__c/fields/AutoFlag__c.field-meta.xml
<CustomField>
    <fullName>AutoFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoFlag</label>
    <type>Checkbox</type>
</CustomField>