force-app/main/default/objects/ReplenishmentPolicy__c/fields/DaysCover__c.field-meta.xml
<CustomField>
    <fullName>DaysCover__c</fullName>
    <label>DaysCover</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>