force-app/main/default/objects/ReplenishmentPolicy__c/fields/LeadTimeDays__c.field-meta.xml
<CustomField>
    <fullName>LeadTimeDays__c</fullName>
    <label>LeadTimeDays</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>