force-app/main/default/objects/ReplenishmentPolicy__c/fields/MaxQty__c.field-meta.xml
<CustomField>
    <fullName>MaxQty__c</fullName>
    <label>MaxQty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>