force-app/main/default/objects/ReplenishmentPolicy__c/fields/MinQty__c.field-meta.xml
<CustomField>
    <fullName>MinQty__c</fullName>
    <label>MinQty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>