force-app/main/default/objects/ReplenishmentPolicy__c/fields/SafetyStock__c.field-meta.xml
<CustomField>
    <fullName>SafetyStock__c</fullName>
    <label>SafetyStock</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>